--- a/samm/src/main/resources/templates/festival/searchfestival.html
+++ b/samm/src/main/resources/templates/festival/searchfestival.html
@@ -9,7 +9,9 @@
     color: #fff; 
     border: 1px solid transparent;
 } */
-
+#moreFestival{
+	cursor: pointer;
+}
 
 </style>
 <section class="hero-wrap hero-wrap-2 js-fullheight"
@@ -175,7 +177,8 @@
 		<h2 class="festival--subject"
 			th:if="${festival} == null and ${klist} == null">검색 결과가 없습니다.</h2>
 		<div class="row" id="festivalING">
-			<div class="col-md-4 ftco-animate" th:each="list:${festival}">
+			
+			<div class="col-md-4 ftco-animate festivalStatus" th:each="list:${festival}" th:id="'festival'+${listStat.index}">
 				<div class="project-wrap">
 				<input id="eventSize" th:value="${listStat.size}" hidden>
 					<a class="img" th:if="${list.firstimage} != null"
@@ -262,6 +265,7 @@
 		</div>
 		<div class="row mt-5">
 			<div class="col text-center">
+			<a th:if="${festival} != null" id="moreFestival">더 보기</a>
 				<div class="block-27">
 					<input hidden th:value="${count}" id="count"> <input hidden
 						th:value="${keyword}" id="keyword">
