--- a/samm/src/main/resources/templates/mng/festival/festivalimg.html
+++ b/samm/src/main/resources/templates/mng/festival/festivalimg.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
 .modal-body img{
     width: 100% !important;
@@ -9,29 +11,32 @@
     height: 100% !important;
 }
 </style>
+ 
+
 <script>
-$(document).ready(function(){ 
-	$('#mod_btn').click(function(){
-		$('#imgform').attr({
-			'method':'post',
-			'action':'updateYN' 
-		});
-		$('#imgform').submit();
+
+function allowNo(iid){
+	alert(iid);
+	$('#imgform').attr({
+		'method':'post',
+		'action':'iupdateNwhy' 
 	});
-	
-	$('#del_btn').click(function(){
-		$('#imgform').attr({
-			'method':'post',
-			'action':'fdelimpl' 
-		});
-		$('#imgform').submit();
+	$('#imgform').submit();
+}
+
+
+function allowYes(iid){
+	alert(iid);
+	$('#imgform').attr({
+		'method':'post',
+		'action':'iupdateY' 
 	});
-});
+	$('#imgform').submit();
+}
+
+
 </script>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
@@ -53,11 +58,39 @@ $(document).ready(function(){
 </tr>
 </thead>
 
-<form id="imgform">
+
 <tbody>
+
 <tr th:each="vo : ${volist}">
   	<td>
-  		<input type="checkbox" id="allowCheck" name="iid" th:value="${vo.iid}" class="form-check-primary">
+  	<!-- <input type="checkbox" id="allowCheck" name="iid" th:value="${vo.iid}" class="form-check-primary">  -->
+  	<!-- <input type="hidden" id="allowCheck" name="iid" th:value="${vo.iid}"> -->
+  	<button type="submit" id="ok_btn" class="btn btn-primary mr-2" th:onClick="allowYes([[${vo.iid}]])">허용</button>                  
+	<button type="button" class="btn btn-light mr-2" data-bs-toggle="modal" th:data-bs-target="'#'+'selModal'+${vo.iid}">거절</button>
+	
+	<!-- The Modal -->
+<div class="modal" th:id="'selModal'+${vo.iid}">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">거절사유</h4>
+        <!--  <button type="button" class="btn-close" data-bs-dismiss="modal"></button> -->
+      </div> 
+      	
+		  <!-- Modal body -->
+		  <form id="imgform">
+		 <div class="modal-body">
+		 	<input type="hidden" id="allowCheck" name="iid" th:value="${vo.iid}">
+			<input type="text" class="form-control" name="whytext"><br><br>
+		 	<button type="submit" id="no_btn" th:onClick="allowNo([[${vo.iid}]])" class="btn btn-light mr-2">거절</button>
+		 	<button type="button" id="close_btn"  class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+		 </div>  
+		 </form>  
+		 </div>
+	</div>
+	</div> 
+	<!-- The Modal -->
+ 
   	</td>
  	<td th:text="|${vo.uname} ( ${vo.uid} )|"></td>
  	<td th:text="${vo.ftitle}"></td>
@@ -66,32 +99,31 @@ $(document).ready(function(){
  	
  	<button type="button" class="btn btn-warning" data-bs-toggle="modal" th:data-bs-target="'#'+'imgModal'+${vo.iid}"> 보기 </button>
 
-<!-- The Modal -->
-<div class="modal" th:id="'imgModal'+${vo.iid}">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
+	<!-- The Modal -->
+	<div class="modal" th:id="'imgModal'+${vo.iid}">
+	  <div class="modal-dialog modal-dialog-centered">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h4 class="modal-title">Fesltival 요청 사진</h4>
+	        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+	      </div> 
+	     <!-- Modal body -->
+	      <div class="modal-body">  
+	        <img th:src="@{'/images/festival/'+${vo.imgname}}" class="w-200"> 
+	        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
+	</div> 
+	<!-- The Modal -->
 
-
-      <div class="modal-header">
-        <h4 class="modal-title">Fesltival 요청 사진</h4>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div> 
-
-      <!-- Modal body -->
-      <div class="modal-body">  
-        <img th:src="@{'/images/festival/'+${vo.imgname}}" class="w-200"> 
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-      </div>
-
-    </div>
-  </div>
-</div> 
-<!-- The Modal -->
 </td>
+
 </tr>	
+
 </tbody>
-</form>
- 
+
+
 </table>
   
 </div>
@@ -100,10 +132,10 @@ $(document).ready(function(){
 </div> <!-- row -->
  
 <br><br>
-
+<!-- 
 <button type="submit" id="mod_btn" class="btn btn-primary mr-2">허용</button>                  
-<button type="submit" id="del_btn" class="btn btn-light mr-2">삭제</button>
-
+<button type="submit" id="del_btn" class="btn btn-light mr-2">거절</button>
+-->
 
 </body>
 </html>
