--- a/samm/src/main/resources/templates/board/write.html
+++ b/samm/src/main/resources/templates/board/write.html
@@ -26,7 +26,7 @@
 							class="fa fa-chevron-right"></i></a></span> <span>Blog <i
 						class="fa fa-chevron-right"></i></span>
 				</p>
-				<h1 class="mb-0 bread">Bloig Write</h1>
+				<h1 class="mb-0 bread">Blog Write</h1>
 			</div>
 		</div>
 	</div>
@@ -37,7 +37,7 @@
 	<div class="pt-5 mt-5">	
 		<form id="post">
 			<div class="form-group">
-				<input type="text" placeholder="이곳에 제목을 엽력 하세요."
+				<input type="text" placeholder="이곳에 제목을 입력 하세요."
 					class="form-control form-control-user write-title" name="title" id="title">
 					
 				<textarea id="summernote" name="content"></textarea>
