사진삭제, 댓글 안보이는거 수정

--- a/samm/src/main/resources/templates/festival/detail.html
+++ b/samm/src/main/resources/templates/festival/detail.html
@@ -228,9 +228,9 @@
 				th:value="${reviewStat.size}" id="size">
 				<div class="vcard bio">
 					<img th:if="${review.profile_img} == null"
-						th:src="@{/images/noimagep.png}" alt="Image placeholder"> <img
-						th:unless="${review.profile_img} == null"
-						th:src="${review.profile_img}" alt="Image placeholder">
+						th:src="@{/images/noimagep.png}" alt="Image placeholder"> 
+					<img th:unless="${review.profile_img} == null"
+						th:src="@{'/images/'+${review.profile_img}}" alt="Image placeholder">
 				</div>
 				<div class="comment-body">
 					<div class="btn-body">
