--- a/samm/src/main/resources/templates/board/detail.html
+++ b/samm/src/main/resources/templates/board/detail.html
@@ -157,10 +157,10 @@
 							th:each="review:${clist}"><input hidden
 							th:value="${reviewStat.size}" id="size">
 							<div class="vcard bio">
-								<img th:if="${review.profile_img} == null"
-									th:src="@{/images/noimagep.png}" alt="Image placeholder"> <img
-									th:unless="${review.profile_img} == null"
-									th:src="${review.profile_img}" alt="Image placeholder">
+							<img th:if="${review.profile_img} == null"
+								th:src="@{/images/noimagep.png}" alt="Image placeholder"> 
+							<img th:unless="${review.profile_img} == null"
+								th:src="@{'/images/'+${review.profile_img}}" alt="no image">
 							</div>
 							<div class="comment-body">
 								<div class="btn-body">
