--- a/samm/src/main/resources/templates/nav.html
+++ b/samm/src/main/resources/templates/nav.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
-            <li class="nav-item active"><a href="/about" class="nav-link">About</a></li>
+            <li class="nav-item active"><a href="/searchfestival" class="nav-link">Search</a></li>
             <li class="nav-item active"><a href="/map" class="nav-link">FestivalMap</a></li>
             <li class="nav-item active"><a href="/board" class="nav-link">Board</a></li>
 
