--- a/samm/src/main/resources/templates/board/write.html
+++ b/samm/src/main/resources/templates/board/write.html
@@ -37,7 +37,7 @@
 	<div class="pt-5 mt-5">	
 		<form id="post">
 			<div class="form-group">
-				<input type="text" placeholder="이곳에 제목을 엽력 하세요."
+				<input type="text" placeholder="이곳에 제목을 입력 하세요."
 					class="form-control form-control-user write-title" name="title" id="title">
 					
 				<textarea id="summernote" name="content"></textarea>
