--- a/samm/src/main/resources/templates/festival/detail.html
+++ b/samm/src/main/resources/templates/festival/detail.html
@@ -230,7 +230,7 @@
 					<img th:if="${review.profile_img} == null"
 						th:src="@{/images/noimagep.png}" alt="Image placeholder"> 
 					<img th:unless="${review.profile_img} == null"
-						th:src="@{'/images/'+${review.profile_img}}" alt="Image placeholder">
+						th:src="@{'/images/profile/'+${review.profile_img}}" alt="Image placeholder">
 				</div>
 				<div class="comment-body">
 					<div class="btn-body">
